the final check

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <p>RunSmart</p>
+        <p>RunSmart final check</p>
         <p>бегай легко - укрепи здоровье</p>
         <p>Официальный представитель</p>
         <p>Garmin, Polar, Suunto</p>
