added some things

--- a/index.html
+++ b/index.html
@@ -17,12 +17,11 @@
   <div class="container">
     <header class="header">
       <div class="logo">
-        <p>RunSmart final check</p>
-        <p>бегай легко - укрепи здоровье</p>
+        <img src="assets/images/logo/running-man-2-64.png" alt="Logo Image">
       </div>
       <div class="info">
         <p>Официальный представитель</p>
-        <p>Garmin, Polar, Suunto</p>
+        <p><span class="companies">Garmin, Polar, Suunto</span></p>
       </div>
       <div class="call">
         <p>+7 (499) 922-89-74</p>
@@ -34,39 +33,46 @@
 
     <main class="main">
       
-  <div class="first-background">
     <section class="section first-screen">
     <div class="title">
-      <h1>Подбор пульсометра</h1>
+      <h1>ПОДБОР ПУЛЬСОМЕТРА</h1>
       <p>с учётом Вашего уровня подготовки</p>
     </div>
     <ul class="icons">
-      <li class="icons-item">Время подбора:<br>10 минут</li>
-      <li class="icons-item">Бесплатная<br>доставка</li>
-      <li class="icons-item">Ответим<br>на все вопросы</li>
+      <li class="icons-item">
+        <img src="assets/images/first screen logos/019_timer_time_stopwatch_2-64.png" alt="Таймер">
+        <p>Время подбора:<br>10 минут</p>
+      </li>
+      <li class="icons-item">
+        <img src="assets/images/first screen logos/app 08 hand cart 64.png" alt="Тележка">
+        <p>Бесплатная<br>доставка</p>
+      </li>
+      <li class="icons-item">
+        <img src="assets/images/first screen logos/messages 64.png" alt="Окно чата">
+        <p>Ответим<br>на все вопросы</p>
+      </li>
     </ul>
     <button type="button" class="btn">заказать консультацию</button>
     <p>или <a href="#">ПЕРЕЙТИ В КАТАЛОГ</a></p>
     </section>
-  </div>
 
   <!----------------------------------------- BENEFITS ----------------------------------------->
 
     <section class="section benefits">
-      <h2 class="headind">НАШИ ПРЕИМУЩЕСТВА</h2>
+      <h2 class="heading">НАШИ ПРЕИМУЩЕСТВА</h2>
       <ul class="benefits-list">
         <li class="benefits-list-item">
-          <img src="#" alt="Кубок" width="70">
+          <img src="assets/images/benefits logos/cup.png" alt="Кубок" width="70">
           <h3>Делимся опытом</h3>
           <p>Наши сотрудники всегда готовы поделиться своим опытом, <br>так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!</p>
         </li>
         <li class="benefits-list-item">
-          <img src="#" alt="Сердце" width="70">
+          <img src="assets/images/benefits logos/heart.png" alt="Сердце" width="70">
           <h3>Заботимся о здоровье</h3>
           <p>Мы работаем для того, <br>>чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!</p>
         </li>
         <li class="benefits-list-item">
-          <img src="#" alt="Кроссовок" width="70">
+          <img src="assets/images/benefits logos/shoe.png" alt="Кроссовок" width="70">
           <h3>Учим бегать</h3>
           <p>Помогаем с обучением <br>правильной технике бега! <br>Дружим с крупнейшей школой бега в России - <span class="custom">I LOVE RUNNING.</span></p>
         </li>
@@ -75,18 +81,16 @@
 
   <!----------------------------------------- CONSULT ----------------------------------------->
 
-    <div class="consult-background">
       <section class="consult">
-        <h2 class="headind">Получите бесплатную консультациюпо подбору пульсометра </h2>
+        <h2 class="heading">Получите бесплатную консультациюпо подбору пульсометра</h2>
         <p>Просто заполните форму заявки и мы перезвоним вам в течении 10 минут</p>
-        <form action="#">
+        <form class="forms" action="#">
           <input type="text" placeholder="Ваше имя">
           <input type="tel" placeholder="Ваш телефон">
           <input type="email" placeholder="Ваш E-mail">
           <button type="submit"  class="btn">заказать консультацию</button>
         </form>
       </section>
-    </div>
   <!----------------------------------------- CAROUSEL ----------------------------------------->
 
     <section class="section carousel">
@@ -98,7 +102,7 @@
   <!----------------------------------------- CATALOG ----------------------------------------->
 
     <section class="section catalog">
-      <h2 class="headind">Каталог пульсометров</h2>
+      <h2 class="heading">Каталог пульсометров</h2>
       <ul class="catalog-menu">
         <li class="catalog-menu-item"><button class="btn catalog-btn">для фитнеса</button></li>
         <li class="catalog-menu-item"><button class="btn catalog-btn">для бега</button></li>
@@ -123,7 +127,7 @@
   <!----------------------------------------- REWIEWS ----------------------------------------->
 
     <section class="section reviews">
-      <h2 class="headind">отзывы клиентов</h2>
+      <h2 class="heading">отзывы клиентов</h2>
       <ul class="reviews-list">
         <li class="reviews-list-item">
           <img src="" alt="">
