--- a/index.html
+++ b/index.html
@@ -129,33 +129,39 @@
     <section class="section reviews">
       <h2 class="heading">отзывы клиентов</h2>
       <ul class="reviews-list">
-        <li class="reviews-list-item">
-          <img src="" alt="">
-          <p class="reviews-name">Ирина Иванченко </p>
-          <p class="reviews-marathon">2 полумарафона</p>
-          <p class="reviews-text">Не знала, что себе купить - обратилась к ребятам из RunSmart - подобрали пульсометр, который подошёл именно под мои цели и финансовые возможности.<br>
-            Через некоторое время решила обновить гаджет - не раздумывая обратилась туда же.<br><br>
-            Новые цели - новый гаджет!
-            <br>Спасибо, RunSmart! </p>
+        <li class="reviews-list-item review-1">
+          <img class="review-1-pic" src="assets/images/profilepics/photo_1.png" alt="Фотография участника 1">
+          <div class="review-1-text">
+            <p class="reviews-name">Ирина Иванченко </p>
+            <p class="reviews-marathon">2 полумарафона</p>
+            <p class="reviews-text">Не знала, что себе купить - обратилась к ребятам из RunSmart - подобрали пульсометр, который подошёл именно под мои цели и финансовые возможности.<br>
+              Через некоторое время решила обновить гаджет - не раздумывая обратилась туда же.<br><br>
+              Новые цели - новый гаджет!
+              <br>Спасибо, RunSmart! </p>
+          </div>
         </li>
-        <li class="reviews-list-item">
-          <img src="" alt="">
-          <p> class="reviews-name"Иван Сёмочкин </p>
-          <p class="reviews-marathon">1 полумарафон</p>
-          <p class="reviews-text">Крутая штука-пульсометр. Обычно без них бегал. Оказывается только хуже себе делал.<br>
-            Купил пульсометр, ещё в подарок получил тренировку. Со мной вместе провели первую тренировку, научили пользоваться новым гаджетом.
-            Также объяснили основы анатомии, составили план тренировок на месяц вперёд.<br><br>
-            С ними подготовился к своему первому полумарафону! Спасибо!!!</p>
+        <li class="reviews-list-item review-2">
+          <img class="review-2-pic" src="assets/images/profilepics/photo_2.png" alt="Фотография участника 2">
+          <div class="review-2-text">
+            <p class="reviews-name">Иван Сёмочкин </p>
+            <p class="reviews-marathon">1 полумарафон</p>
+            <p class="reviews-text">Крутая штука-пульсометр. Обычно без них бегал. Оказывается только хуже себе делал.<br>
+              Купил пульсометр, ещё в подарок получил тренировку. Со мной вместе провели первую тренировку, научили пользоваться новым гаджетом.
+              Также объяснили основы анатомии, составили план тренировок на месяц вперёд.<br><br>
+              С ними подготовился к своему первому полумарафону! Спасибо!!!</p>
+          </div>
         </li>
-        <li class="reviews-list-item">
-          <img src="" alt="">
-          <p class="reviews-name">Юлия Дашкина </p>
-          <p class="reviews-marathon">2 полумарафона</p>
-          <p class="reviews-text">Долго не могла начать бегать, т.к. до этого несколько раз начинала, но становилось тяжело и я бросала. 
-            От друзей услышала о RunSmart и о беге с контролем пульса и решила попробовать.<br><br>
-            Позвонила, ребята поинтересовались моими целями и подобрали очень интересный вариант со скидкой! 
-            Теперь бегаю и наслаждаюсь бегом! Пробежала уже 2 полумарафона и несколько более коротких забегов и не намерена останавливаться!<br><br>
-            Спасибо!!!</p>
+        <li class="reviews-list-item review-3">
+          <img  class="review-3-pic"src="assets/images/profilepics/photo_3.png" alt="Фотография участника 3">
+          <div class="review-3-text">
+            <p class="reviews-name">Юлия Дашкина </p>
+            <p class="reviews-marathon">2 полумарафона</p>
+            <p class="reviews-text">Долго не могла начать бегать, т.к. до этого несколько раз начинала, но становилось тяжело и я бросала. 
+              От друзей услышала о RunSmart и о беге с контролем пульса и решила попробовать.<br><br>
+              Позвонила, ребята поинтересовались моими целями и подобрали очень интересный вариант со скидкой! 
+              Теперь бегаю и наслаждаюсь бегом! Пробежала уже 2 полумарафона и несколько более коротких забегов и не намерена останавливаться!<br><br>
+              Спасибо!!!</p>
+            </div>
         </li>
       </ul>
     </section>
