--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
     <section class="section benefits">
       <div class="benefits-container">
-        <h2 class="heading">НАШИ ПРЕИМУЩЕСТВА</h2>
+        <h2 class="heading benefits-heading">НАШИ ПРЕИМУЩЕСТВА</h2>
         <ul class="benefits-list">
           <li class="benefits-list-item">
             <img src="assets/images/benefits logos/cup.png" alt="Кубок" width="70">
@@ -90,7 +90,7 @@
 
       <section class="consult">
       <div class="consult-container">
-        <h2 class="heading">Получите бесплатную консультацию<br>по подбору пульсометра</h2>
+        <h2 class="heading consult-heading">Получите бесплатную консультацию<br>по подбору пульсометра</h2>
         <p>Просто заполните форму заявки<br>и мы перезвоним вам в течении 10 минут</p>
         <form class="forms" action="#">
           <input type="text" placeholder="Ваше имя">
@@ -114,30 +114,45 @@
       </div>
     </section>
 
-  <!----------------------------------------- CATALOG ----------------------------------------->
+  <!----------------------------------------- CATALOG MENU ----------------------------------------->
 
     <section class="section catalog">
       <div class="catalog-container">
-        <h2 class="heading">Каталог пульсометров</h2>
+        <h2 class="heading catalog-heading">Каталог пульсометров</h2>
         <ul class="catalog-menu">
-          <li class="catalog-menu-item"><button class="catalog-btn">для фитнеса</button></li>
-          <li class="catalog-menu-item"><button class="catalog-btn">для бега</button></li>
-          <li class="catalog-menu-item"><button class="catalog-btn">для триатлона</button></li>
+          <li class="catalog-menu-item">
+            <button class="catalog-btn btn-fitness">
+              <span class="btn-text">для фитнеса</span>
+            </button>
+          </li>
+          <li class="catalog-menu-item">
+            <button class="catalog-btn">
+              <span class="btn-text btn-run">для бега</span>
+            </button>
+          </li>
+          <li class="catalog-menu-item">
+            <button class="catalog-btn"><span class="btn-text btn-tria">для триатлона</span>
+            </button>
+          </li>
         </ul>
+
+  <!----------------------------------------- WATCH ----------------------------------------->
+
 
         <ul class="watch-list">
           <li class="watch-list-item">
-            <div>
               <img src="assets/images/watchface/photo.png" alt="Часы" width="140">
               <h3>Пульсометр Polar FT1</h3>
               <p>Для первых шагов в тренировках, основанных на сердечном ритме</p>
               <a href="#" class="watch-more">ПОДРОБНЕЕ</a>
-              <div class="prices">
-                <p>4750</p>
-                <p>4500</p>
-              </div>    
-              <button class="btn" type="button">КУПИТЬ</button>
-            </div>
+              <hr>
+              <div class="buy">
+                <div class="prices">
+                  <p>4750 руб.</p>
+                  <p>4500 руб.</p>
+                </div>    
+                <button class="btn" type="button">КУПИТЬ</button>
+              </div>
           </li>
 
           <li class="watch-list-item">
@@ -207,7 +222,7 @@
 
     <section class="section reviews">
       <div class="reviews-container">
-        <h2 class="heading">отзывы клиентов</h2>
+        <h2 class="heading reviews-heading">отзывы клиентов</h2>
         <div class="reviews-list">
             <img class="review-1-pic" src="assets/images/profilepics/photo_1.png" alt="Фотография участника 1">
             <div class="review-1-text">
