--- a/index.html
+++ b/index.html
@@ -107,16 +107,16 @@
 
     <section class="section carousel">
       <div class="container carousel-container">
+        <button class="chevron chevron-left" type="button"><img src="assets/images/chevrons/chevron_left_solid.png" alt=""></button>
         <div class="swiper mySwiper">
-          <button class="chevron chevron-left" type="button"></button>
           <div class="swiper-wrapper">
             <div class="swiper-slide"><img src="assets/images/slides/slide1.png" alt="Часы"></div>
             <div class="swiper-slide"><img src="assets/images/slides/slide1.png" alt="Часы"></div>
             <div class="swiper-slide"><img src="assets/images/slides/slide1.png" alt="Часы"></div>
           </div>
-          <button class="chevron chevron-right" type="button"></button>
         </div>
-    
+        <button class="chevron chevron-right" type="button"><img src="assets/images/chevrons/chevron_right_solid.png" alt=""></button>
+        
 
 
       </div>
